...
    <string name="required">Required</string>
    <string name="survey">Survey</string>
    <string name="success" tools:ignore="UnusedResources">Success</string>
    <string name="done" tools:ignore="UnusedResources">Done</string>
    <string name="close">Close</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="navigate_up">Navigate up</string>
    <string name="logo">Logo</string>

    <string name="result">Result</string>
    <string name="language">Language</string>
    <string name="notSupported">Not Supported</string>
...

    <string name="select_unit">Select unit</string>
    <string name="submitResult">Submit Result</string>
    <string name="warning">Warning</string>
    <string name="notFound">Not Found</string>

    <string name="instructions">Instructions</string>

    <plurals name="minutes">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>

    <!--External-->
    <string name="sensor">Sensor</string>
    <string name="sensors">Sensors</string>

    <!--Sensor Details Screen-->
    <string name="deviceConnecting">Connecting to Device</string>

    <!--Sensor-->
    <string name="deviceConnectSensor">Connect sensor</string>
...
    <string name="unableToConnect">Could not connect. Try connecting again.</string>
    <string name="sensorDetails">Sensor Details</string>
    <string name="enterAnIdForSensor">Enter an Id for this sensor</string>
    <string name="ecSensorId">EC Sensor Id</string>

    <!--Alerts-->
    <string name="cannotStartTest">Cannot start test</string>
    <string name="errorTestNotAvailable">Requested test is not available</string>
    <string name="pleaseContactSupport">Please contact technical support</string>
    <string name="versionExpired">Version expired</string>
    <string name="thisVersionHasExpired">This version of the app has expired.</string>
    <string name="uninstallAndInstallFromStore">Please uninstall and then install the latest version from Play Store.</string>

...
    <string name="install_external_app">Please install the Akvo Flow app from your instance.</string>

    <!--Bluetooth-->
    <string name="nearby_devices">Nearby devices</string>
    <string name="connect_device">Connect to your device</string>
    <string name="to_turn_bluetooth_on">To turn bluetooth on:</string>
    <string name="connect">Connect</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="location_permission">Location permission is required for bluetooth connection</string>
    <string name="turn_location_on">To continue, turn on device location. Required for bluetooth connection</string>
    <string name="unknown_device">Unknown</string>
    <string name="scanning">Scanning for MD610 photometer…</string>

    <!--About Screen-->
    <string name="waterQualitySystem">Water &amp; Soil Quality System</string>
    <string name="copyrightMessage">Copyright © Stichting Akvo</string>
    <string name="legalInformation">Legal Information</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="settings_disabled">Settings disabled</string>

    <!--Software notices-->
    <string name="software_incorporates_material">This software incorporates material from the projects listed below</string>
    <string name="apache_license_2">Apache License 2.0</string>
...
    <string name="cca_share_license">CC BY-NC-SA 4.0 – International</string>
    <string name="cca_license">CC BY 4.0 International</string>
    <string name="software_notices">Software Notices</string>
    <string name="eclipse_public_license">Eclipse Public License 1.0</string>

    <!--Intro-->
    <string name="connect_with_app">Connect with Akvo Flow</string>
    <string name="a_water_quality_testing_solution">A water quality testing solution supporting over 20 parameters, like pH, E.coli or free chlorine.</string>
    <string name="test_water_quality_using">Test water quality using connected colorimetry, microbiology, sensor and strip tests.</string>
    <string name="app_is_integrated">Akvo Caddisfly is integrated with Akvo Flow, a data collection and monitoring tool.</string>
    <string name="to_conduct_a_water_quality_test">To conduct a water quality test go to Flow and select the Caddisfly question.</string>
    <string name="go_to_external_app">Go to Akvo Flow</string>
    <string name="errorAkvoFlowRequired">Please install Akvo Flow app</string>

    <!--App Update-->
    <string name="update_ready">Update is ready to install</string>
    <string name="update_download_fail">Unable to download update</string>
...
