...

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/appName"
            android:paddingBottom="10dp"
            android:textColor="@color/text_primary"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/main_icon"
...
