...
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="cbt">E.coli - Aquagenx CBT</string>
    <string name="e_coli">E.coli</string>
    <string name="total_coliform">Total Coliform</string>
    <string name="prepare_sample">Prepare sample</string>
    <string name="cbt_compartments">CBT Compartments</string>

    <string name="read_instructions">Read Instructions</string>
...
