...

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="optional">Optional</string>
    <string name="skip">Skip</string>

    <string name="md610_photometer">MD 610 Photometer</string>
    <string name="check_bluetooth_turned_on">Check that MD610 and its bluetooth are both turned on</string>
    <string name="to_turn_md610_on">To turn MD 610 on:</string>

    <string name="press_on_button"><![CDATA[Press (*on*)]]></string>
    <string name="press_mode_button"><![CDATA[Press (*mode*) to enter menu.]]></string>
    <string name="select_bluetooth"><![CDATA[Press (*down*) to scroll to Bluetooth and press (*enter*)]]></string>
...
